# huaweicloud-mrs-example

./: .gitignore  README.md
performance-tools/ClickHouse/: README.md
performance-tools/Elasticsearch/: README.md
performance-tools/Flink/: pom.xml  使用指引.md
performance-tools/HBase/: README.md
performance-tools/Hadoop/: pom.xml
performance-tools/HetuEngine/: Readme.txt
performance-tools/Hive/: README.md  tpcds-run-hive.sh  tpcds-setup-hive.sh
performance-tools/Hudi/: README.md  pom.xml
performance-tools/Redis/: README.md  pom.xml
performance-tools/Solr/: README.md
performance-tools/Spark/: README.md
src/: log.py  rollback_post.py  rollback_postcheck.py  rollback_pre.py  rollback_precheck.py  upgrade_post.py  upgrade_postcheck.py  upgrade_pre.py  upgrade_precheck.py
src/alluxio-examples/: pom.xml
src/clickhouse-examples/: pom.xml
src/elasticsearch-rest-client-example/: pom.xml
src/elasticsearch-transport-client-example/: pom.xml
src/flink-examples/: pom.xml
src/graphbase-examples/: pom.xml
src/hbase-examples/: .gitignore  pom.xml
src/hdfs-c-example/: README  component_env_C_example  hdfs_test.c  makefile
src/hdfs-example-normal/: .gitignore  pom.xml
src/hdfs-example-security/: .gitignore  pom.xml
src/hdfs-examples/: pom.xml
src/hetu-examples/: pom.xml
src/hive-examples/: pom.xml
src/impala-examples/: pom.xml
src/kafka-examples/: pom.xml
src/manager-examples/: pom.xml
src/mapreduce-examples/: pom.xml
src/redis-examples/redis-examples-c/: CMakeLists.txt
src/redis-examples/redis-examples-c/src/: kerberos.c  testMain.c
(+2067 files in other folders)
